@@ -7,6 +7,7 @@ Griffith ChangeLog
 
 2008-12-25  Michael Jahn
 	* [#309373] export to pdf
+	* Cinematografo movie plugin updated
 
 2008-12-19  Michael Jahn
 	* OFDb, IMDB-de movie plugin updated
